# ai-logger

./: .gitignore  README.md  pyproject.toml
scripts/: claude-hook.sh  log-session-now.sh
skills/note/: SKILL.md
src/ai_logger/: __init__.py  cli.py  config.py  models.py  pipeline.py  queue.py  roam.py  state.py  summarizer.py
src/ai_logger/parsers/: __init__.py  claude_code.py  codex.py
tests/: conftest.py  test_cli.py  test_parsers.py  test_queue.py  test_roam.py  test_state.py  test_summarizer.py
